syntax = "proto3";

package kite.service.users;
option go_package = "github.com/ben-toogood/kite/users/proto;users";
import "google/protobuf/timestamp.proto";

service Users {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc Get (GetRequest) returns (GetResponse);
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message CreateResponse {
  User user = 1;
}

message GetRequest {
  repeated string ids = 1;
}

message GetResponse {
  map<string,User> users = 2;
}